src/objects/TASKRAY__Project__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <globalPicklist>Country</globalPicklist>
        <label>Country</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Linea_de_Costo__c</fullName>
        <label>Linea de Costo</label>
        <picklist>
            <picklistValues>
                <fullName>Material Efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing Excellence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribución</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain Indirects</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Saving__c</fullName>
        <label>Saving</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <recordTypes>
        <fullName>Strategy</fullName>
        <active>true</active>
        <label>Strategy</label>
    </recordTypes>
    <recordTypes>
        <fullName>VIP</fullName>
        <active>true</active>
        <label>VIP</label>
    </recordTypes>
</CustomObject>